--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "graphql": "^16.6.0",
+    "lottie-web": "^5.10.0",
     "next": "13.0.6",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-tweet-embed": "^2.0.0",
     "typescript": "4.9.4"
